# semantiq

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  PUBLISHING.md  README.md  deny.toml  mcp.json.example  railway.toml
.github/: FUNDING.yml
.github/workflows/: build.yml  ci.yml  release.yml  security.yml
crates/semantiq/: Cargo.toml
crates/semantiq-embeddings/: Cargo.toml
crates/semantiq-embeddings/src/: lib.rs  model.rs
crates/semantiq-index/: Cargo.toml
crates/semantiq-index/src/: auto_indexer.rs  exclusions.rs  lib.rs  schema.rs  store.rs  watcher.rs
crates/semantiq-index/src/store/: calibrations.rs  chunks.rs  dependencies.rs  files.rs  mod.rs  observations.rs  symbols.rs  tests.rs
crates/semantiq-mcp/: Cargo.toml
crates/semantiq-mcp/src/: lib.rs  server.rs  version_check.rs
crates/semantiq-mcp/src/tools/: deps.rs  explain.rs  find_refs.rs  mod.rs  search.rs
crates/semantiq-parser/: Cargo.toml
crates/semantiq-parser/src/: chunks.rs  imports.rs  language.rs  lib.rs  symbols.rs
crates/semantiq-retrieval/: Cargo.toml
crates/semantiq-retrieval/src/: engine.rs  lib.rs  query.rs  results.rs  text_searcher.rs
crates/semantiq-retrieval/src/engine/: analysis.rs  mod.rs  search.rs  tests.rs  threshold.rs
crates/semantiq-retrieval/src/threshold/: calibrator.rs  collector.rs  config.rs  mod.rs  stats.rs
crates/semantiq/src/: main.rs
crates/semantiq/src/commands/: calibrate.rs  common.rs  index.rs  init.rs  init_cursor.rs  mod.rs  search.rs  serve.rs  stats.rs
crates/semantiq/src/http/: mod.rs  routes.rs  tests.rs  types.rs
docs/: Semantiq-PRD-v4.md  Semantiq-Technical-Spec.md
homebrew/Formula/: semantiq.rb
npm/: README.md  package.json
npm/scripts/: install.js
