[workspace]
resolver = "2"
members = [
    "crates/semantiq",
    "crates/semantiq-mcp",
    "crates/semantiq-index",
    "crates/semantiq-retrieval",
    "crates/semantiq-parser",
    "crates/semantiq-embeddings",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Semantiq Contributors"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }

# MCP Server
rmcp = { version = "0.1", features = ["server", "transport-io"] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Tree-sitter
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"

# File watching
notify = "7.0"

# Glob patterns
glob = "0.3"
ignore = "0.4"

# Internal crates
semantiq-mcp = { path = "crates/semantiq-mcp" }
semantiq-index = { path = "crates/semantiq-index" }
semantiq-retrieval = { path = "crates/semantiq-retrieval" }
semantiq-parser = { path = "crates/semantiq-parser" }
semantiq-embeddings = { path = "crates/semantiq-embeddings" }

[profile.release]
lto = true
codegen-units = 1
