[package]
name = "semantiq-embeddings"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["onnx"]
onnx = ["dep:ort", "dep:tokenizers", "dep:ndarray", "dep:reqwest", "dep:dirs"]

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true

# Optional ONNX dependencies
ort = { version = "2.0.0-rc.11", optional = true }
tokenizers = { version = "0.21", optional = true }
ndarray = { version = "0.17", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"], optional = true }
dirs = { version = "5.0", optional = true }
