[package]
name = "semantiq-embeddings"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
onnx = ["dep:ort", "dep:tokenizers", "dep:ndarray", "dep:ureq", "dep:dirs", "dep:sha2"]

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true

# Optional ONNX dependencies
ort = { version = "2.0.0-rc.11", features = ["download-binaries"], optional = true }
tokenizers = { version = "0.21", optional = true }
ndarray = { version = "0.17", optional = true }
ureq = { version = "3", optional = true }
dirs = { version = "5.0", optional = true }
sha2 = { version = "0.10", optional = true }
