[package]
name = "semantiq-index"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
semantiq-parser = { path = "../semantiq-parser" }
semantiq-embeddings = { path = "../semantiq-embeddings" }

rusqlite.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
notify.workspace = true
ignore.workspace = true
