[package]
name = "semantiq-parser"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tree-sitter.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-python.workspace = true
tree-sitter-go.workspace = true
tree-sitter-java.workspace = true
tree-sitter-c.workspace = true
tree-sitter-cpp.workspace = true
tree-sitter-php.workspace = true

serde.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
